2004-01-10  Paolo Nenzi <p.nenzi@ieee.org>

	*  src/frontend/aspice.c: Added #ifdef for SOLARIS.

	*  src/include/cktdefs.h: added prototype for NInzIter().

	*  src/spicelib/devices/cpl/*: Added CPLask and CPLmAsk functions to
	   access device's internals. Added CPLunsetup function to allow
	   for multiple simulations.
	   
	*  DEVICES: updated with cpl changes.       

2003-12-31  Paolo Nenzi <p.nenzi@ieee.org>

        *  src/spicelib/devices/tra/*: Cleaned code.
	
	*  src/spicelib/devices/ltra/*: Cleaned code.
	
	*  src/spicelib/devices/urc/*: Cleaned code.

        *  tests/transmission/{cpl*, txl*, ibm*}: Added test files for the
	   kspice's cpl and txl devices. 
	
	*  src/spicelib/devices/cpl/*: Cleaned the cpl code.
	
	*  src/spicelib/devices/txl/*: Cleaned the txl code.
	
	*  src/frontend/subckt.c, src/spicelib/analysis/cktdojob.c,
	   src/spicelib/analysis/dctran.c: added some txl an cpl specific
	   code from kspice.

        *  src/spicelib/devices/mesa/*: Added parallel multiplier and "dtemp",
	   pole-zero analysis and parallel code switches.

	*  src/spicelib/devices/mes/*: Added parallel multiplier.
	
	*  tests/mes, tests/mes/subth.cir: added test netlist for mes devices.

	*  DEVICES: updated documentation including MES, MESA, CPL, TXL, TRA,
	   LTRA and URC changes.

2003-12-30  Paolo Nenzi <p.nenzi@ieee.org>

        * src/spicelibe/devices/hfet2/*: Added parallel multiplier and "dtemp"
	  parameters. Added pole-zero analysis and parallel code switches. 
	
	* src/spicelib/devices/jfet/jfetpzld.c: gspr and gdpr were initialized
	  with Resist and not Conduct, corrected!

	* src/spicelib/devices/hfet1/*: Added parallel multiplier and "dtemp" to
	  the code. Added the pole-zero analysis and parallel code checks.
	  Corrected a bug in the unsetup function that caused a segfault.
	
	* tests/hfet/, tests/hfet/id_vgs.cir, tests/inverter.cir: added hfet
	  test netlists.
	  
	* DEVICES: updated hfet1 status.  
